--- a/services.html
+++ b/services.html
@@ -269,42 +269,42 @@
             <!-- call to action end -->
 
             <!-- footer -->
-            <footer class="footer">
+              <footer class="footer">
                 <div class="footer-content">
                     <!-- Company Section -->
                     <div class="footer-company-section">
                         <table class="footer-company-table">
                             <tr>
                                 <td>
-                                    <a href="https://main.d1fwsqa4sfyuc3.amplifyapp.com/" class="footer-company-link">
+                                    <a href="https://apelng.github.io/ApelGroup/" class="footer-company-link">
                                         <h3>Home</h3>
                                     </a>
                                 </td>
                             </tr>
                             <tr>
                                 <td>
-                                    <a href="https://main.dgpdt2zjocoln.amplifyapp.com/" class="footer-company-link">
+                                    <a href="https://apelng.github.io/apelasset/" class="footer-company-link">
                                         <h3>Apel Asset Limited</h3>
                                     </a>
                                 </td>
                             </tr>
                             <tr>
                                 <td>
-                                    <a href="https://main.d3jeduuxvr862a.amplifyapp.com/" class="footer-company-link">
+                                    <a href="https://apelng.github.io/ACTL/" class="footer-company-link">
                                         <h3>Apel Capital & Trust</h3>
                                     </a>
                                 </td>
                             </tr>
                             <tr>
                                 <td>
-                                    <a href="https://main.d1ni3jh7vnzup8.amplifyapp.com/" class="footer-company-link">
+                                    <a href="https://apelng.github.io/Registrars/" class="footer-company-link">
                                         <h3>Apel Capital Registrars</h3>
                                     </a>
                                 </td>
                             </tr>
                             <tr>
                                 <td>
-                                    <a href="https://main.d1ni3jh7vnzup8.amplifyapp.com/" class="footer-company-link">
+                                    <a href="https://apelng.github.io/AWML/" class="footer-company-link">
                                         <h3>Apel Wealth Management Limited</h3>
                                     </a>
                                 </td>
@@ -403,7 +403,7 @@
             
                     <!-- Footer Bottom -->
                     <div class="footer-bottom">
-                        <p>© 2025 All rights reserved | Home | Member of NASD | Trading License Holder of The Nigerian Exchange</p>
+                        <p>© 2025 All rights reserved | Apel Wealth Management Limited</p>
                     </div>
                 </div>
             </footer>
