--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                         <h1>Invest in the Apel <br>Wealth Halal Product</h1>
                         <!-- <p >Plan ahead with smart investments designed to help you achieve financial freedom and long-term security. Your future starts now.</p> -->
                         <div class="mil-buttons-frame">
-                            <a href="acet.html" target="_blank" class="mil-btn mil-md mil-add-arrow">Get Started</a>
+                            <a href="HalaFund.html" target="_blank" class="mil-btn mil-md mil-add-arrow">Get Started</a>
                             <br>
                             <!-- <a href="https://youtu.be/suOk-c2_Il4?si=lUIgHW-AjYDIS25o" target="_blank" class="mil-btn mil-md2 mil-add-arrow" style="background-color: #8abf42;">Explore</a> -->
                         </div>
@@ -123,7 +123,7 @@
                         </h1>
                         <!-- <p>Invest wisely and grow your wealth with expert-managed solutions tailored to your financial goals. Start your journey today</p> -->
                         <div class="mil-buttons-frame">
-                            <a href="atts.html" target="_blank" class="mil-btn mil-md mil-add-arrow" >Get Started</a>
+                            <a href="index.html" target="_blank" class="mil-btn mil-md mil-add-arrow" >Get Started</a>
                             <br>
                             <!-- <a href="https://youtu.be/suOk-c2_Il4?si=lUIgHW-AjYDIS25o" target="_blank" class="mil-btn mil-md mil-add-arrow" style="background-color: #8abf42;">Explore</a> -->
                         </div>
@@ -142,7 +142,7 @@
                         <h1> Hedge your funds <br>against inflation</h1>
                         <!-- <p>Seamless, transparent, and secure investment options at your fingertips. Whether you're a beginner or a seasoned investor, we’ve got you covered.</p> -->
                         <div class="mil-buttons-frame">
-                            <a href="art.html" target="_blank" class="mil-btn mil-md mil-add-arrow" >Get Started</a>
+                            <a href="index.html" target="_blank" class="mil-btn mil-md mil-add-arrow" >Get Started</a>
                             <br>
                             <!-- <a href="https://youtu.be/suOk-c2_Il4?si=lUIgHW-AjYDIS25o" target="_blank" class="mil-btn mil-md mil-add-arrow" style="background-color: #8abf42;">Explore</a> -->
                         </div>
@@ -364,7 +364,7 @@
                             <div class="mil-up"><a href="about.html" class="mil-btn mil-m mil-add-arrow">Learn More</a></div>
                         </div>
                         <div class="col-xl-6">
-                            <a href="your-page-url.html" class="mil-brand-card-link">
+                            <a href="ProductInv.html" class="mil-brand-card-link">
                             <div class="mil-brand-card mil-mb-30 mil-up" style="background-image: url(./img/inner-pages/nairaproduct.png);">
                                 <div class="mil-services-overlay"></div>
                                
@@ -376,7 +376,7 @@
                                 </p>
                             </div>
                             </a>
-                            <a href="your-page-url.html" class="mil-brand-card-link">
+                            <a href="HalaFund.html" class="mil-brand-card-link">
                             <div class="mil-brand-card mil-mb-30 mil-up" style="background-image: url(./img/inner-pages/nairaproduct.png);">
                                 <div class="mil-services-overlay"></div>
                                
