--- a/about.html
+++ b/about.html
@@ -145,12 +145,12 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-xl-4 mil-sm-text-center mil-mb-30 mil-up">
-                            <p class="h1 mil-display mil-mb-15"><span class="mil-accent mil-counter" data-number="7">7</span><span class="mil-pale">M</span></p>
-                            <h5>Registered Users</h5>
+                            <p class="h1 mil-display mil-mb-15"><span class="mil-accent mil-counter" data-number="100">100</span><span class="mil-pale">%</span></p>
+                            <h5>Trusted</h5>
                         </div>
                         <div class="col-xl-4 mil-sm-text-center mil-mb-30 mil-up">
-                            <p class="h1 mil-display mil-mb-15"><span class="mil-accent mil-counter" data-number="1.6">1.6</span><span class="mil-pale">M</span></p>
-                            <h5>Regular Users</h5>
+                            <p class="h1 mil-display mil-mb-15"><span class="mil-accent mil-counter" data-number="100">100</span><span class="mil-pale">%</span></p>
+                            <h5>Compliant</h5>
                         </div>
                         <div class="col-xl-4 mil-sm-text-center mil-mb-30 mil-up">
                             <p class="h1 mil-display mil-mb-15"><span class="mil-accent mil-counter" data-number="170">170</span><span class="mil-pale">+</span></p>
@@ -240,7 +240,7 @@
                     <div class="row justify-content-center">
                         <div class="col-xl-10">
                             <h2 class="mil-mb-30">"At Apel, transparency is not just a promise; It is the cornerstone of our relationship with you. We believe that trust is built with clear policies and coherent actions."</h2>
-                            <p class="mil-text-m mil-soft mil-mb-60">- Apel Team</p>
+                            <p class="mil-text-m mil-soft mil-mb-60"></p>
                             <div class="row">
                                 <div class="col-xl-6">
                                     <ul class="mil-list-2 mil-type-2 mil-mb-30">
