--- a/services.html
+++ b/services.html
@@ -112,7 +112,7 @@
                 <div class="container">
                     <div class="row justify-content-between align-items-center">
                         <div class="col-xl-5 mil-mb-80">
-                            <h2 class="mil-mb-30 mil-up">Apel Wealth Investment Product </h2>
+                            <h2 class="mil-mb-30 mil-up">Apel Wealth Management Investment Product </h2>
                             <p class="mil-text-m mil-soft mil-mb-30 mil-up">An Investment product tailored towards individuals/Corporate/Government agencies seeking for capital preservation & income generation.
                             </p>
                             <div class="mil-up"><a href="product02.html" class="mil-btn mil-m mil-add-arrow">Learn more</a></div>
@@ -132,7 +132,7 @@
                 <div class="container">
                     <div class="row flex-sm-row-reverse justify-content-between align-items-center">
                         <div class="col-xl-5 mil-mb-80">
-                            <h2 class="mil-mb-30 mil-up">Apel Wealth Halal Product</h2>
+                            <h2 class="mil-mb-30 mil-up">Apel Wealth Halal Investment Product</h2>
                             <p class="mil-text-m mil-soft mil-mb-30 mil-up">An Investment product targeted at savvy HNIs and Qualified Institutional Investors seeking investment opportunities with attractive returns that aligns with their faith & ethical values.
                             </p>
                             <div class="mil-up"><a href="register.html" class="mil-btn mil-m mil-add-arrow">Learn more</a></div>
@@ -149,7 +149,7 @@
 
             <!-- service -->
             <div class="mil-features mil-p-0-80">
-                <div class="container">
+                <!-- <div class="container">
                     <div class="row justify-content-between align-items-center">
                         <div class="col-xl-5 mil-mb-80">
                             <h2 class="mil-mb-30 mil-up">Apel Wealth Dollar Investment Product</h2>
@@ -163,7 +163,7 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                </div> -->
             </div>
             <!-- service end -->
 
@@ -219,7 +219,8 @@
                 <div class="container">
                     <div class="row justify-content-center">
                         <div class="col-xl-10">
-                            <h2 class="mil-mb-30"> "At Apel Wealth Management, transparency drives every decision. We build trust through clear strategies, expert guidance, and a commitment to growing your wealth."</h2>
+                            <h2 class="mil-mb-30"> "At Apel Wealth Management, we don’t just manage funds; we build futures.
+Our focus is on growing your wealth with strategies rooted in expertise, integrity, and long-term value."</h2>
                             <!-- <p class="mil-text-m mil-soft mil-mb-60">- Apel Team</p> -->
                             <!-- <div class="row">
                                 <div class="col-xl-6">
