--- a/about.html
+++ b/about.html
@@ -132,7 +132,7 @@
                         </div>
                         <div class="col-xl-6 mil-mb-80">
                             <div class="mil-image-frame mil-up">
-                                <img src="img/inner-pages/1.png" alt="image" class="mil-scale-img" data-value-1="1" data-value-2="1.2">
+                                <img src="img/inner-pages/1.jpg" alt="image" class="mil-scale-img" data-value-1="1" data-value-2="1.2">
                             </div>
                         </div>
                     </div>
@@ -153,8 +153,8 @@
                             <h5>Compliant</h5>
                         </div>
                         <div class="col-xl-4 mil-sm-text-center mil-mb-30 mil-up">
-                            <p class="h1 mil-display mil-mb-15"><span class="mil-accent mil-counter" data-number="170">170</span><span class="mil-pale">+</span></p>
-                            <h5>Countries with our coverage</h5>
+                            <p class="h1 mil-display mil-mb-15"><span class="mil-accent mil-counter" data-number="100">100</span><span class="mil-pale">%</span></p>
+                            <h5>Professional</h5>
                         </div>
                     </div>
                 </div>
@@ -370,8 +370,8 @@
                                 <li>6 Alhaji Bashorun Street,<br> 
                                     off Norman Williams Crescent<br> 
                                     South-West Ikoyi, Lagos</li>
-                                <li>Phone: +234 90 4884 4011</li>
-                                <li>Email: info@apel.com.ng</li>
+                                <li>Phone: +234 704 627 7071</li>
+                                <li>Email: apelwealth@apel.ng</li>
                             </ul>
                         </div>
             
