--- a/contact.html
+++ b/contact.html
@@ -252,8 +252,8 @@
                                 <li>6 Alhaji Bashorun Street,<br> 
                                     off Norman Williams Crescent<br> 
                                     South-West Ikoyi, Lagos</li>
-                                <li>Phone: +234 90 4884 4011</li>
-                                <li>Email: info@apel.com.ng</li>
+                                <li>Phone: +234 704 627 7071</li>
+                                <li>Email: +234 704 627 7071</li>
                             </ul>
                         </div>
             
