--- a/product1.html
+++ b/product1.html
@@ -250,8 +250,8 @@
                                 <li>6 Alhaji Bashorun Street,<br> 
                                     off Norman Williams Crescent<br> 
                                     South-West Ikoyi, Lagos</li>
-                                <li>Phone: +234 90 4884 4011</li>
-                                <li>Email: info@apel.com.ng</li>
+                                <li>Phone: +234 704 627 7071</li>
+                                <li>Email: apelwealth@apel.ng</li>
                             </ul>
                         </div>
             
