--- a/index.html
+++ b/index.html
@@ -630,13 +630,13 @@
                             <div class="footer-links-column">
                                 <h6>Useful links</h6>
                                 <ul class="footer-links-list">
-                                    <li><a href="#services">Careers-Join Us</a></li>
-                                    <li><a href="faq.html">Kyc Update</a></li>
-                                    <li><a href="#support">Downloads</a></li>
-                                    <li><a href="#support">Privacy Policy</a></li>
+                                    <li><a href="">Careers-Join Us</a></li>
+                                    <li><a href="">Kyc Update</a></li>
+                                    <li><a href="">Downloads</a></li>
+                                    <li><a href="">Privacy Policy</a></li>
                                     <li><a href="https://drive.google.com/file/d/1MB7yzk0uLT63p_KtKqhGj1qz4MaTXui_/view?usp=sharing">Best Excecution Policy</a></li>
                                     <li><a href="https://drive.google.com/drive/folders/1iHrXlh4F5W28h7HX2YEsFOowrmS0RPU">Customer Complaint Management </a></li>
-                                    <li><a href="#support">Disclaimer</a></li>
+                                    <li><a href="">Disclaimer</a></li>
                                 </ul>
                             </div>
                         </div>
