--- a/index.html
+++ b/index.html
@@ -575,7 +575,7 @@
                         <table class="footer-company-table">
                             <tr>
                                 <td>
-                                    <a href="https://apelng.github.io/ApelGroup/" class="footer-company-link">
+                                    <a href="https://apel.com.ng/" class="footer-company-link">
                                         <h3>Home</h3>
                                     </a>
                                 </td>
@@ -623,7 +623,7 @@
                                     <li><a href="contact.html">Contact Us</a></li>
                                     <li><a href="gallery.html">Gallery</a></li>
                                     <li><a href="products.html">Products</a></li>
-                                    <li><a href="faq.html">FAQ</a></li>
+                                    <li><a href="">FAQ</a></li>
                                 </ul>
                             </div>
                             
@@ -710,7 +710,7 @@
 
         </div>
         <!-- content end -->
-    </div>
+    
     <!-- wrapper end -->
 
     <script>
