--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                         <h1> Hedge your funds <br>against inflation</h1>
                         <!-- <p>Seamless, transparent, and secure investment options at your fingertips. Whether you're a beginner or a seasoned investor, we’ve got you covered.</p> -->
                         <div class="mil-buttons-frame">
-                            <a href="product1.html" target="_blank" class="mil-btn mil-md mil-add-arrow" >Get Started</a>
+                            <a href="services.html" target="_blank" class="mil-btn mil-md mil-add-arrow" >Get Started</a>
                             <br>
                             <!-- <a href="https://youtu.be/suOk-c2_Il4?si=lUIgHW-AjYDIS25o" target="_blank" class="mil-btn mil-md mil-add-arrow" style="background-color: #8abf42;">Explore</a> -->
                         </div>
