--- a/services.html
+++ b/services.html
@@ -115,7 +115,7 @@
                             <h2 class="mil-mb-30 mil-up">Apel Wealth Management Investment Product </h2>
                             <p class="mil-text-m mil-soft mil-mb-30 mil-up">An Investment product tailored towards individuals/Corporate/Government agencies seeking for capital preservation & income generation.
                             </p>
-                            <div class="mil-up"><a href="product02.html" class="mil-btn mil-m mil-add-arrow">Learn more</a></div>
+                            <div class="mil-up"><a href="awip.html" class="mil-btn mil-m mil-add-arrow">Learn more</a></div>
                         </div>
                         <div class="col-xl-6 mil-mb-80">
                             <div class="mil-image-frame mil-up">
@@ -135,7 +135,7 @@
                             <h2 class="mil-mb-30 mil-up">Apel Wealth Halal Investment Product</h2>
                             <p class="mil-text-m mil-soft mil-mb-30 mil-up">An Investment product targeted at savvy HNIs and Qualified Institutional Investors seeking investment opportunities with attractive returns that aligns with their faith & ethical values.
                             </p>
-                            <div class="mil-up"><a href="register.html" class="mil-btn mil-m mil-add-arrow">Learn more</a></div>
+                            <div class="mil-up"><a href="HalaFund.html" class="mil-btn mil-m mil-add-arrow">Learn more</a></div>
                         </div>
                         <div class="col-xl-6 mil-mb-80">
                             <div class="mil-image-frame ml-up">
