--- a/about.html
+++ b/about.html
@@ -239,7 +239,7 @@
                 <div class="container">
                     <div class="row justify-content-center">
                         <div class="col-xl-10">
-                            <h2 class="mil-mb-30">"At Apel, transparency is not just a promise; It is the cornerstone of our relationship with you. We believe that trust is built with clear policies and coherent actions."</h2>
+                            <h2 class="mil-mb-30"> "At Apel Wealth, we are focused on helping you build, grow, and sustain lasting wealth through smart and strategic financial solutions."</h2>
                             <p class="mil-text-m mil-soft mil-mb-60"></p>
                             <div class="row">
                                 <div class="col-xl-6">
@@ -292,39 +292,39 @@
               <footer class="footer">
                 <div class="footer-content">
                     <!-- Company Section -->
-                    <div class="footer-company-section">
+                     <div class="footer-company-section">
                         <table class="footer-company-table">
                             <tr>
                                 <td>
-                                    <a href="https://apelng.github.io/ApelGroup/" class="footer-company-link">
+                                    <a href="https://apel.com.ng/" class="footer-company-link">
                                         <h3>Home</h3>
                                     </a>
                                 </td>
                             </tr>
                             <tr>
                                 <td>
-                                    <a href="https://apelng.github.io/apelasset/" class="footer-company-link">
+                                    <a href="https://asset.apel.com.ng/" class="footer-company-link">
                                         <h3>Apel Asset Limited</h3>
                                     </a>
                                 </td>
                             </tr>
                             <tr>
                                 <td>
-                                    <a href="https://apelng.github.io/ACTL/" class="footer-company-link">
-                                        <h3>Apel Capital & Trust</h3>
+                                    <a href="https://trust.apel.com.ng/" class="footer-company-link">
+                                        <h3>Apel Capital & Trust Limited</h3>
                                     </a>
                                 </td>
                             </tr>
                             <tr>
                                 <td>
-                                    <a href="https://apelng.github.io/Registrars/" class="footer-company-link">
-                                        <h3>Apel Capital Registrars</h3>
+                                    <a href="https://registrars.apel.com.ng/" class="footer-company-link">
+                                        <h3>Apel Capital Registrars Limited</h3>
                                     </a>
                                 </td>
                             </tr>
                             <tr>
                                 <td>
-                                    <a href="https://apelng.github.io/AWML/" class="footer-company-link">
+                                    <a href="https://wealth.apel.com.ng/" class="footer-company-link">
                                         <h3>Apel Wealth Management Limited</h3>
                                     </a>
                                 </td>
@@ -342,7 +342,7 @@
                                     
                                     <li><a href="about.html">About Us</a></li>
                                     <li><a href="contact.html">Contact Us</a></li>
-                                    <li><a href="gallery.html">Gallery</a></li>
+                                    <li><a href="https://apel.com.ng/gallery">Gallery</a></li>
                                     <li><a href="products.html">Products</a></li>
                                     <li><a href="faq.html">FAQ</a></li>
                                 </ul>
