--- a/awip.html
+++ b/awip.html
@@ -155,43 +155,43 @@
             </div>
             <!-- publication end -->
 
-            <!-- footer -->
-            <footer class="footer">
+              <!-- footer -->
+              <footer class="footer">
                 <div class="footer-content">
                     <!-- Company Section -->
                     <div class="footer-company-section">
                         <table class="footer-company-table">
                             <tr>
                                 <td>
-                                    <a href="https://main.d1fwsqa4sfyuc3.amplifyapp.com/" class="footer-company-link">
+                                    <a href="https://apel.com.ng/" class="footer-company-link">
                                         <h3>Home</h3>
                                     </a>
                                 </td>
                             </tr>
                             <tr>
                                 <td>
-                                    <a href="https://main.dgpdt2zjocoln.amplifyapp.com/" class="footer-company-link">
+                                    <a href="https://asset.apel.com.ng/" class="footer-company-link">
                                         <h3>Apel Asset Limited</h3>
                                     </a>
                                 </td>
                             </tr>
                             <tr>
                                 <td>
-                                    <a href="https://main.d3jeduuxvr862a.amplifyapp.com/" class="footer-company-link">
-                                        <h3>Apel Capital & Trust</h3>
+                                    <a href="https://trust.apel.com.ng/" class="footer-company-link">
+                                        <h3>Apel Capital & Trust Limited</h3>
                                     </a>
                                 </td>
                             </tr>
                             <tr>
                                 <td>
-                                    <a href="https://main.d1ni3jh7vnzup8.amplifyapp.com/" class="footer-company-link">
-                                        <h3>Apel Capital Registrars</h3>
+                                    <a href="https://registrars.apel.com.ng/" class="footer-company-link">
+                                        <h3>Apel Capital Registrars Limited</h3>
                                     </a>
                                 </td>
                             </tr>
                             <tr>
                                 <td>
-                                    <a href="https://main.d1ni3jh7vnzup8.amplifyapp.com/" class="footer-company-link">
+                                    <a href="https://wealth.apel.com.ng/" class="footer-company-link">
                                         <h3>Apel Wealth Management Limited</h3>
                                     </a>
                                 </td>
@@ -211,20 +211,20 @@
                                     <li><a href="contact.html">Contact Us</a></li>
                                     <li><a href="gallery.html">Gallery</a></li>
                                     <li><a href="products.html">Products</a></li>
-                                    <li><a href="faq.html">FAQ</a></li>
+                                    <li><a href="">FAQ</a></li>
                                 </ul>
                             </div>
                             
                             <div class="footer-links-column">
                                 <h6>Useful links</h6>
                                 <ul class="footer-links-list">
-                                    <li><a href="#services">Careers-Join Us</a></li>
-                                    <li><a href="faq.html">Kyc Update</a></li>
-                                    <li><a href="#support">Downloads</a></li>
-                                    <li><a href="#support">Privacy Policy</a></li>
+                                    <li><a href="">Careers-Join Us</a></li>
+                                    <li><a href="">Kyc Update</a></li>
+                                    <li><a href="">Downloads</a></li>
+                                    <li><a href="">Privacy Policy</a></li>
                                     <li><a href="https://drive.google.com/file/d/1MB7yzk0uLT63p_KtKqhGj1qz4MaTXui_/view?usp=sharing">Best Excecution Policy</a></li>
                                     <li><a href="https://drive.google.com/drive/folders/1iHrXlh4F5W28h7HX2YEsFOowrmS0RPU">Customer Complaint Management </a></li>
-                                    <li><a href="#support">Disclaimer</a></li>
+                                    <li><a href="">Disclaimer</a></li>
                                 </ul>
                             </div>
                         </div>
