--- a/index.html
+++ b/index.html
@@ -546,13 +546,13 @@
                         <div class="footer-links-section">
                             <div class="footer-links-column">
                                 <h6>Quick links</h6>
-                                <ul class="footer-links-list">
-                                    
+                                <ul class="footer-links-list">    
+                                    <li><a href="our_team.html">Management</a></li>
+                                    <li><a href="our_team.html">Board of Directors</a></li>                              
                                     <li><a href="about.html">About Us</a></li>
-                                    <li><a href="contact.html">Contact Us</a></li>
+                                    <li><a href="contact">Contact Us</a></li>
                                     <li><a href="https://apel.com.ng/gallery">Gallery</a></li>
-                                    <li><a href="services.html">Products</a></li>
-                                    <li><a href="">FAQ</a></li>
+                                    <li><a href="products.html">Products</a></li>
                                 </ul>
                             </div>
                             
