--- a/about.html
+++ b/about.html
@@ -242,7 +242,7 @@
                             <h2 class="mil-mb-30"> "At Apel Wealth, we are focused on helping you build, grow, and sustain lasting wealth through smart and strategic financial solutions."</h2>
                             <p class="mil-text-m mil-soft mil-mb-60"></p>
                             <div class="row">
-                                <div class="col-xl-6">
+                                <!-- <div class="col-xl-6">
                                     <ul class="mil-list-2 mil-type-2 mil-mb-30">
                                         <li>
                                             <div class="mil-up">
@@ -251,8 +251,8 @@
                                             </div>
                                         </li>
                                     </ul>
-                                </div>
-                                <div class="col-xl-6">
+                                </div> -->
+                                <!-- <div class="col-xl-6">
                                     <ul class="mil-list-2 mil-type-2 mil-mb-30">
                                         <li>
                                             <div class="mil-up">
@@ -261,7 +261,7 @@
                                             </div>
                                         </li>
                                     </ul>
-                                </div>
+                                </div> -->
                             </div>
                         </div>
                     </div>
