--- a/index.html
+++ b/index.html
@@ -631,7 +631,7 @@
             
                     <!-- Footer Bottom -->
                     <div class="footer-bottom">
-                        <p>© 2025 All rights reserved | Apel Wealth Management Limited</p>
+                        <p>© 2025 All rights reserved | Apel Wealth Management Limited is registered and regulated by the Securities and Exchange Commission, Nigeria</p>
                     </div>
                 </div>
             </footer>
