--- a/Mutual-fund.html
+++ b/Mutual-fund.html
@@ -289,8 +289,9 @@
                     </div>
             
                     <!-- Footer Bottom -->
-                    <div class="footer-bottom">
-                        <p>© 2025 All rights reserved | Apel Wealth Management Limited</p>
+                   <div class="footer-bottom">
+                        
+                        <p> Apel Wealth Management Limited is registered and regulated by the Securities and Exchange Commission, Nigeria</p>
                     </div>
                 </div>
             </footer>
