--- a/services.html
+++ b/services.html
@@ -403,8 +403,9 @@ Our focus is on growing your wealth with strategies rooted in expertise, integri
                     </div>
             
                     <!-- Footer Bottom -->
-                    <div class="footer-bottom">
-                        <p>© 2025 All rights reserved | Apel Wealth Management Limited</p>
+                     <div class="footer-bottom">
+                        
+                        <p> Apel Wealth Management Limited is registered and regulated by the Securities and Exchange Commission, Nigeria</p>
                     </div>
                 </div>
             </footer>
