--- a/HalaFund.html
+++ b/HalaFund.html
@@ -118,7 +118,10 @@
                                 The APELWM Halal Investment Product (“APELWMHIP” or “The Product”) is an investment
                                 product targeted at Retail, High-Networth Individuals (HNIs) and Qualified Institutional
                                 Investors (QIIs) seeking investment opportunities with attractive returns that align with
-                                their faith and ethical beliefs.
+                                their faith and ethical beliefs.<br>
+                                Apel WM Halal product is registered with the 
+Securities and Exchange Commission, Nigeria.
+
                                 <br>
                                 <br>
 
@@ -265,6 +268,11 @@
                             </form>
                         </div>
                     </div>
+                    </div>
+
+                     <div class="footer-bottom">
+                        
+                        <p> Apel Wealth Management Limited is registered and regulated by the Securities and Exchange Commission, Nigeria</p>
                     </div>
             <!-- footer end -->
 
