--- a/awip.html
+++ b/awip.html
@@ -119,6 +119,7 @@
                             <h2 class="mil-mb-60 mil-up">Secure Your Capital, Grow Your Wealth</h2>
                             <p class="mil-text-m mil-soft mil-mb-30 mil-up"> Our Apel Investment Product is designed for individuals, corporate organizations, and government agencies looking for a secure and profitable way to invest.</p>
                             <p class="mil-text-m mil-soft mil-mb-30 mil-up"> Whether your goal is capital preservation or income generation, our expertly managed investment solutions ensure steady returns while minimizing risk.</p>
+                            <p class="mil-text-m mil-soft mil-mb-30 mil-up"> Apel Weath Investment Product is registered with the Securities and Exchange Commission, Nigeria.</p>
                             
                             <div class="mil-mb-60 mil-up">
                                 <blockquote class="mil-text-xl mil-mb-30"> "Wealth isn’t just built, it’s strategically created. Let us guide you on the path to financial growth and security."</blockquote>
