--- a/index.html
+++ b/index.html
@@ -316,12 +316,12 @@
                             </a>
                         </div>
                         <div class="col-xl-6">
-                            <a href="Mutual-fund.html" class="mil-brand-card-link">
+                            <a href="Money-Market-Fund.html" class="mil-brand-card-link">
                             <div class="mil-brand-card mil-mb-30 mil-up" style="background-image: url(./img/inner-pages/nairaproduct.png);">
                                 <div class="mil-services-overlay"></div>
                                
-                                <h5 class="mil-light mil-light mil-mb-20">Apel Wealth Mutual Fund</h5>
-                                <p class="mil-text-s mil-pale-2">Our Mutual Funds offer a smart and diversified investment approach, promoting access to expertly managed portfolios designed to achieve various financial objectives.</p>
+                                <h5 class="mil-light mil-light mil-mb-20">Apel Wealth Money Market  Fund</h5>
+                                <p class="mil-text-s mil-pale-2">We offer a smart and diversified investment approach, promoting access to expertly managed portfolios designed to achieve various financial objectives.</p>
                             </div>
                             </a>
                         </div>
