--- a/Money-Market-Fund.html
+++ b/Money-Market-Fund.html
@@ -155,7 +155,7 @@
                     <div class="row justify-content-center">
                         <div class="col-xl-12">
                             <div class="mil-pub-cover mil-up">
-                                <img src="img/inner-pages/nairaproduct.png" alt="cover" class="mil-scale-img" data-value-1="1" data-value-2="1.2">
+                                <img src="img/inner-pages/Mutual.jpg" alt="cover" class="mil-scale-img" data-value-1="1" data-value-2="1.2">
                             </div>
                         </div>
                         <div class="col-xl-9 mil-p-80-80">
