--- a/Money-Market-Fund.html
+++ b/Money-Market-Fund.html
@@ -211,9 +211,9 @@
 
                             <!-- Action Buttons -->
                             <div class="mil-mb-60 mil-up mmf-buttons-container" style="display: flex; gap: 20px; flex-wrap: wrap; margin-top: 40px;">
-                                <a href="#" class="mil-button mil-button-lg" style="background-color: #107b5f; color: #fff !important; padding: 15px 40px; text-decoration: none; border-radius: 4px; display: inline-block; font-weight: 600; transition: all 0.3s ease;">
+                                <!-- <a href="#" class="mil-button mil-button-lg" style="background-color: #107b5f; color: #fff !important; padding: 15px 40px; text-decoration: none; border-radius: 4px; display: inline-block; font-weight: 600; transition: all 0.3s ease;">
                                     <span style="color: #fff !important;">Apply</span>
-                                </a>
+                                </a> -->
                                 <a href="https://res.cloudinary.com/apelng/image/upload/v1764513971/AWMMF_-_Subscription_Form_m9e4mk.pdf" target="_blank" class="mil-button mil-button-lg" style="background-color: #107b5f; color: #fff !important; padding: 15px 40px; text-decoration: none; border-radius: 4px; display: inline-block; font-weight: 600; transition: all 0.3s ease;">
                                     <span style="color: #fff !important;">Download Form</span>
                                 </a>
