--- a/Money-Market-Fund.html
+++ b/Money-Market-Fund.html
@@ -221,12 +221,12 @@
                                 </a>
                                 
                                 <a href="https://drive.google.com/drive/folders/1Upn5FrgrtTpDhv4HeGwhlzOAP7CCxUmi?usp=sharing" target="_blank" class="mil-button mil-button-lg" style="background-color: #107b5f; color: #fff !important; padding: 15px 40px; text-decoration: none; border-radius: 4px; display: inline-block; font-weight: 600; transition: all 0.3s ease;">
-                                    <span style="color: #fff !important;">Individual Form</span>
+                                    <span style="color: #fff !important;">Subscription Form</span>
                                 </a>
 
-                                <a href="https://drive.google.com/drive/folders/1FUsCF5POqpBYXRp0FwsHmHyLtDjaUfip?usp=sharing" target="_blank" class="mil-button mil-button-lg" style="background-color: #107b5f; color: #fff !important; padding: 15px 40px; text-decoration: none; border-radius: 4px; display: inline-block; font-weight: 600; transition: all 0.3s ease;">
+                                <!-- <a href="https://drive.google.com/drive/folders/1FUsCF5POqpBYXRp0FwsHmHyLtDjaUfip?usp=sharing" target="_blank" class="mil-button mil-button-lg" style="background-color: #107b5f; color: #fff !important; padding: 15px 40px; text-decoration: none; border-radius: 4px; display: inline-block; font-weight: 600; transition: all 0.3s ease;">
                                     <span style="color: #fff !important;">Corporate Form</span>
-                                </a>
+                                </a> -->
                             </div>
 
                             <br>
